--- a/index.html
+++ b/index.html
@@ -164,35 +164,35 @@ button svg {
       <button id="muteBtn" aria-label="Звук">
         <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M 20 6 C 22 6 25 8 26 12 C 27 16 26 20 24 23 C 23 24 22 25 20 25" 
-                stroke="#FFFFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
+                stroke="#FFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
           <path d="M 20 10 C 21 10 22 11 22.5 13 C 23 15 22.5 17 21 18.5" 
-                stroke="#FFFFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
+                stroke="#FFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
           <path d="M 19 24 C 18 25 17 25.5 16 25" 
-                stroke="#FFFFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
+                stroke="#FFFF" stroke-width="2.5" stroke-linecap="round" fill="none"/>
         </svg>
       </button>
       <button id="freezeBtn" aria-label="Заморозити">
         <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <line x1="16" y1="4" x2="16" y2="28" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
-          <line x1="4" y1="16" x2="28" y2="16" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
-          <line x1="7" y1="7" x2="25" y2="25" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
-          <line x1="25" y1="7" x2="7" y2="25" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round"/>
-          <line x1="16" y1="4" x2="13" y2="7" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="16" y1="4" x2="19" y2="7" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="16" y1="28" x2="13" y2="25" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="16" y1="28" x2="19" y2="25" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="4" y1="16" x2="7" y2="13" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="4" y1="16" x2="7" y2="19" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="28" y1="16" x2="25" y2="13" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="28" y1="16" x2="25" y2="19" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="7" y1="7" x2="9" y2="5" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="7" y1="7" x2="5" y2="9" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="25" y1="7" x2="23" y2="5" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="25" y1="7" x2="27" y2="9" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="7" y1="25" x2="5" y2="23" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="7" y1="25" x2="9" y2="27" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="25" y1="25" x2="27" y2="23" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
-          <line x1="25" y1="25" x2="23" y2="27" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="16" y1="4" x2="16" y2="28" stroke="#FFFF" stroke-width="2" stroke-linecap="round"/>
+          <line x1="4" y1="16" x2="28" y2="16" stroke="#FFFF" stroke-width="2" stroke-linecap="round"/>
+          <line x1="7" y1="7" x2="25" y2="25" stroke="#FFFF" stroke-width="2" stroke-linecap="round"/>
+          <line x1="25" y1="7" x2="7" y2="25" stroke="#FFFF" stroke-width="2" stroke-linecap="round"/>
+          <line x1="16" y1="4" x2="13" y2="7" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="16" y1="4" x2="19" y2="7" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="16" y1="28" x2="13" y2="25" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="16" y1="28" x2="19" y2="25" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="4" y1="16" x2="7" y2="13" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="4" y1="16" x2="7" y2="19" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="28" y1="16" x2="25" y2="13" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="28" y1="16" x2="25" y2="19" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="7" y1="7" x2="9" y2="5" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="7" y1="7" x2="5" y2="9" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="25" y1="7" x2="23" y2="5" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="25" y1="7" x2="27" y2="9" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="7" y1="25" x2="5" y2="23" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="7" y1="25" x2="9" y2="27" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="25" y1="25" x2="27" y2="23" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
+          <line x1="25" y1="25" x2="23" y2="27" stroke="#FFFF" stroke-width="1.5" stroke-linecap="round"/>
         </svg>
       </button>
     </div>
@@ -215,14 +215,14 @@ const texts = [
 ];
 
 let textFrozen = false;
-let originalOrder = {}; // Зберігаємо початковий порядок слів
+let originalOrder = {};
 
 function setup(){
   ['p1','p2','p3'].forEach((id, idx)=>{
     const cont = document.getElementById(id);
     cont.innerHTML = '';
     const words = texts[idx].split(/\s+/).filter(Boolean);
-    originalOrder[id] = words.slice(); // Зберігаємо оригінальний порядок
+    originalOrder[id] = words.slice();
     words.forEach((w)=>{
       const sp = document.createElement('span');
       sp.className = 'word';
@@ -233,7 +233,6 @@ function setup(){
 }
 setup();
 
-// ВІДНОВЛЕННЯ ТЕКСТУ В ПОЧАТКОВИЙ СТАН
 function restoreText(){
   ['p1','p2','p3'].forEach((id)=>{
     const cont = document.getElementById(id);
@@ -277,7 +276,7 @@ function shuffleOnce(){
   });
 }
 
-// АУДИО: ШАГИ З ЗАТРИМКОЮ 3 СЕКУНДИ - ЧАСТОТА ПІДВИЩЕНА НА 40%
+// АУДИО: ШАГИ С ЧАСТОТОЙ 150 → 130 Гц
 let audioCtx = null;
 let masterGain = null;
 let kickDrum = { running: false, mute: false };
@@ -288,7 +287,8 @@ function initAudio() {
   try {
     audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     masterGain = audioCtx.createGain();
-    masterGain.gain.value = kickDrum.mute ? 0 : 1.0;
+    // умеренная громкость
+    masterGain.gain.value = kickDrum.mute ? 0 : 0.8;
     masterGain.connect(audioCtx.destination);
 
     kickDrum.running = true;
@@ -307,7 +307,7 @@ function initAudio() {
   }
 }
 
-// Створення одного ГУЧНОГО удару - ЧАСТОТА ПІДВИЩЕНА НА 40%
+// Один удар шага: частота 150 Гц → 130 Гц
 function makeSingleKick(startTime, gainMultiplier = 1.0) {
   if (!audioCtx || !kickDrum.running) return;
   
@@ -315,33 +315,32 @@ function makeSingleKick(startTime, gainMultiplier = 1.0) {
   osc.type = 'sine';
   const oscGain = audioCtx.createGain();
   
-  // Частота 70→28 Hz (було 50→20, тепер +40%)
-  osc.frequency.setValueAtTime(70, startTime);
-  osc.frequency.exponentialRampToValueAtTime(28, startTime + 0.3);
+  // Диапазон 150–130 Гц
+  osc.frequency.setValueAtTime(150, startTime);
+  osc.frequency.exponentialRampToValueAtTime(130, startTime + 0.25);
   
-  // М'ЯКА АТАКА БЕЗ КЛАЦАННЯ
   oscGain.gain.setValueAtTime(0, startTime);
-  oscGain.gain.linearRampToValueAtTime(1.4 * gainMultiplier, startTime + 0.05);
-  oscGain.gain.linearRampToValueAtTime(1.2 * gainMultiplier, startTime + 0.5);
-  oscGain.gain.exponentialRampToValueAtTime(0.001, startTime + 3.6);
+  oscGain.gain.linearRampToValueAtTime(1.0 * gainMultiplier, startTime + 0.03);
+  oscGain.gain.linearRampToValueAtTime(0.6 * gainMultiplier, startTime + 0.4);
+  oscGain.gain.exponentialRampToValueAtTime(0.001, startTime + 2.0);
   
   osc.connect(oscGain);
-  
-  // ГУЧНА РЕВЕРБЕРАЦІЯ
+
+  // Лёгкая реверберация (комната)
   const convolver = audioCtx.createConvolver();
-  const reverbLength = audioCtx.sampleRate * 3.5;
+  const reverbLength = audioCtx.sampleRate * 1.2;
   const reverbBuffer = audioCtx.createBuffer(2, reverbLength, audioCtx.sampleRate);
   
   for (let channel = 0; channel < 2; channel++) {
     const channelData = reverbBuffer.getChannelData(channel);
     for (let i = 0; i < reverbLength; i++) {
-      channelData[i] = (Math.random() * 2 - 1) * Math.exp(-i / (audioCtx.sampleRate * 1.0));
+      channelData[i] = (Math.random() * 2 - 1) * Math.exp(-i / (audioCtx.sampleRate * 0.6));
     }
   }
   convolver.buffer = reverbBuffer;
   
   const reverbGain = audioCtx.createGain();
-  reverbGain.gain.value = 0.4;
+  reverbGain.gain.value = 0.2;
   
   oscGain.connect(convolver);
   convolver.connect(reverbGain);
@@ -350,26 +349,25 @@ function makeSingleKick(startTime, gainMultiplier = 1.0) {
   oscGain.connect(masterGain);
   
   osc.start(startTime);
-  osc.stop(startTime + 3.6);
+  osc.stop(startTime + 2.0);
 }
 
-// ПОДВІЙНИЙ УДАР
+// Двойной шаг
 function makeDoubleKick(startTime) {
   if (!audioCtx || !kickDrum.running) return;
   
   makeSingleKick(startTime, 1.0);
-  makeSingleKick(startTime + 0.06, 0.8);
+  makeSingleKick(startTime + 0.08, 0.8);
 }
 
-// ПОДВІЙНІ УДАРИ КОЖНІ 2 СЕКУНДИ - ПЕРШИЙ УДАР ЧЕРЕЗ 3 СЕКУНДИ
+// Двойные шаги каждые 2 секунды, первый через 3 секунды
 function scheduleKicks() {
   if (!kickDrum.running) return;
   
   const now = audioCtx.currentTime;
   const kickInterval = 2.0;
-  const initialDelay = 3.0; // ЗАТРИМКА 3 СЕКУНДИ
+  const initialDelay = 3.0;
   
-  // ПЕРШИЙ УДАР ЧЕРЕЗ 3 СЕКУНДИ
   for (let i = 0; i < 20; i++) {
     makeDoubleKick(now + initialDelay + kickInterval * i);
   }
@@ -377,16 +375,14 @@ function scheduleKicks() {
   setTimeout(scheduleKicks, (initialDelay + kickInterval * 19) * 1000);
 }
 
-// КНОПКА ЗВУКУ - ЗАПУСК З ОДНОГО НАТИСКАННЯ
+// Кнопка звука
 const muteBtn = document.getElementById('muteBtn');
 
 muteBtn.onclick = () => {
   if (!audioCtx) {
-    // ПЕРШЕ НАТИСКАННЯ - ЗАПУСКАЄМО ЗВУК
     initAudio();
     muteBtn.style.background = '#555';
   } else {
-    // НАСТУПНІ НАТИСКАННЯ - ВИМИКАЄМО/ВМИКАЄМО
     if (audioCtx.state === 'suspended') {
       audioCtx.resume().catch(() => {});
     }
@@ -396,13 +392,13 @@ muteBtn.onclick = () => {
     const now = audioCtx.currentTime;
     masterGain.gain.cancelScheduledValues(now);
     masterGain.gain.setValueAtTime(masterGain.gain.value, now);
-    masterGain.gain.linearRampToValueAtTime(kickDrum.mute ? 0 : 1.0, now + 0.3);
+    masterGain.gain.linearRampToValueAtTime(kickDrum.mute ? 0 : 0.8, now + 0.3);
     
     muteBtn.style.background = kickDrum.mute ? '#333' : '#555';
   }
 };
 
-// КНОПКА ЗАМОРОЗКИ - ВІДНОВЛЮЄ ТЕКСТ НА 2-3 СЕКУНДИ
+// Кнопка снежинки
 const freezeBtn = document.getElementById('freezeBtn');
 
 freezeBtn.onclick = () => {
@@ -411,7 +407,6 @@ freezeBtn.onclick = () => {
   textFrozen = true;
   freezeBtn.style.background = '#777';
   
-  // ВІДНОВЛЮЄМО ТЕКСТ В ПОЧАТКОВИЙ СТАН
   restoreText();
   
   const freezeDuration = 2000 + Math.random() * 1000;
@@ -422,7 +417,7 @@ freezeBtn.onclick = () => {
   }, freezeDuration);
 };
 
-// ТЕКСТОВА АНІМАЦІЯ
+// Цикл текстовой анимации
 (function startTextLoop(){
   function step() {
     const baseDelay = 4400;
