--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
-<title>Інвентаризація пріоритетів</title>
+<title>Притягнення до горизонту</title>
 <style>
 * {
   box-sizing: border-box;
@@ -157,8 +157,8 @@ button svg {
 <body>
 <div class="card" role="main">
   <div class="header">
-    <h1>Блок 3.
-ІНВЕНТАРИЗАЦІЯ ПРІОРИТЕТІВ, 2016, 160 × 180 см,
+    <h1>Блок 2.
+ПРИТЯГНЕННЯ ДО ГОРИЗОНТУ, 2016, 160 × 180 см,
 12 робіт (розмір кожної роботи 40 × 60 см), антиживопис.</h1>
     <div class="button-group">
       <button id="muteBtn" aria-label="Звук" style="background: #333;">
@@ -199,7 +199,7 @@ button svg {
   </div>
 
   <div class="image-container">
-    <img src="FRAGMENT HORRIZONT.png" alt="Інвентаризація пріоритетів">
+    <img src="fragment horrizont.png" alt="Притягнення до горизонту">
   </div>
 
   <div class="para"><div class="line" id="p1"></div></div>
@@ -211,9 +211,9 @@ button svg {
 console.log('Script started');
 
 const texts = [
-"«Інвентаризація пріоритетів» — це третя фаза проєкту «Глобальна адаптація», в якій людина вперше стикається не зі зменшенням самої себе і не з притяганням до зовнішнього горизонту, а з необхідністю перегляду внутрішньої ієрархії цінностей. Якщо в «Механіці обнулення» суб'єкт проходить процедуру нівелювання, а в «Тяжінні до горизонту» — втягується в безкінечний рух до недосяжної лінії майбутнього, то тут він опиняється в точці вимушеного обліку: що саме з накопиченого досвіду, вірувань, звичок і ілюзій він готовий зберегти, а що без жалю передає у володіння глобальному алгоритму.",
-"Візуальна мова цього блоку вибудовується як серія умовних опитувальних листів, реєстрів і схем-перекличок, де кожна одиниця зображення працює як рядок у відомості інвентаризації. Псевдодіаграми, табличні структури, знаки-піктограми створюють відчуття суворої облікової процедури, в якій людські почуття, переконання та мрії переводяться в розряд активів і пасивів. Глядач бачить перед собою не просто набір образів, а ніби абстрактний склад людського досвіду, де кожна цінність може бути перекласифікована, спрощена або знята з балансу.",
-"Художник розглядає цей блок як критичний момент прихованої угоди між людиною та глобальною системою. На стадії інвентаризації суб'єкт ще формально володіє правом вибору, але сам механізм обліку вже нав'язаний ззовні: критерії важливості, корисності й актуальності надходять не зсередини його досвіду, а з логіки техногенної раціональності. «Інвентаризація пріоритетів» попереджає про те, що одного дня людина може виявити себе не просто учасником цього процесу, а його добровільним ревізором — тим, хто особисто підписує акт списання власних базових цінностей заради ілюзії адаптації до світу, який дедалі менше потребує людського виміру."
+"Притягнення до горизонту — це друга фаза проєкту «Глобальна адаптація», в якій людина стикається не з внутрішньою редукцією, а з зовнішнім вектором, що м'яко, але наполегливо витягує її за межі набутого досвіду. На відміну від «Механіки обнулення», яка фіксує момент знецінення індивідуального «я», цей блок реєструє стан постійного тяжіння до невиразної лінії попереду — до того самого горизонту, де обіцянка розширення збігається із загрозою остаточної втрати опори. Тут суб'єкт уже не просто обробляється системою, він починає сам прагнути до точки, з якої не видно шляху назад.",
+"Візуальна мова блоку вибудовується як серія псевдонавігаційних схем, умовних карт і парадигмальних «маршрутів», де кожен фрагмент працює як фрагмент інструкції з руху в бік недосяжного. Форми нагадують навчальні плакати й технічні креслення, але замість конкретних координат дають глядачеві лише натяки на траєкторії, які ніколи не замикаються. Таким чином, «Притягнення до горизонту» показує не кінцеву мету, а нескінченний процес вирівнювання людського погляду по лінії глобального сценарію — сценарію, в якому горизонт завжди трохи далі, ніж точка теперішнього вибору.",
+"Митець розглядає цей блок як критичний експеримент над самим поняттям надії: тут надія позбавлена змістового ядра й перетворюється на чисту функцію притягнення. Людина, що рухається до горизонту, вже приймає задану конфігурацію простору й погоджується з її правилами, навіть тоді, коли вони фактично виключають її присутність. «Притягнення до горизонту» попереджає про момент, коли суб'єкт, виснажений опором тиску майбутнього, добровільно вбудовується в його рельєф — і зі свідка процесів глобалізації сам перетворюється на будівельний інструмент, що працює на межі між видимим і ще ненасталим."
 ];
 
 let textFrozen = false;
@@ -291,7 +291,7 @@ function shuffleOnce(){
   });
 }
 
-// АУДИО: ТОЧНО ТАК ЖЕ, КАК В «ПРИТЯГНЕННІ ДО ГОРИЗОНТУ» (150 → 130 Гц)
+// АУДИО: ШАГИ 150 → 130 Гц
 let audioCtx = null;
 let masterGain = null;
 let kickDrum = { running: false, mute: true };
